tests/NormalTests/paczka1/fuzzy1/53015002.err
Error in line 1: db66A0 S145 10,3
Error in line 6: s1UW9Xr A150 60,9
Error in line 10: db66A0 S145 24,9
Error in line 11: db66A0 S483 9,8
Error in line 30: fJhCzgvy44i A150 80,4
Error in line 32: s1UW9Xr S483 75,71
Error in line 31: fJhCzgvy44i S145 73,2
Error in line 36: fJhCzgvy44i S483 74,4
